--- a/www/css/indexEmpresa.css
+++ b/www/css/indexEmpresa.css
@@ -48,6 +48,8 @@ form {
     margin-bottom: 10px;
     width: 100px;
     height: 100px;
+    border-radius: 100%;
+    object-fit: cover;
 }
 
 #latitud,
@@ -122,7 +124,6 @@ button {
     cursor: pointer;
     font-size: 1em;
     font-weight: 600;
-    margin-bottom: 15px;
 }
 
 
