--- a/www/css/registro.css
+++ b/www/css/registro.css
@@ -55,8 +55,8 @@
 }
 
 .content {
-    display: flex; 
-    justify-content: space-around;  
+    display: flex;
+    justify-content: space-around;
     padding: 1rem;
     background-color: white;
     border-radius: 30px;
@@ -76,7 +76,7 @@
     align-items: center;
 }
 
-#tipo{
+#tipo {
     font-size: 16px;
 }
 
@@ -94,13 +94,12 @@
     transform: translateY(-50%);
     color: black;
     pointer-events: none;
-    transition: .2s;
+    transition: all 3s ease-in-out;
 }
 
 input:focus~label,
 input:valid~label {
-    top: -5px;
-    opacity: 0;
+    right: -280px;
 }
 
 .inputbox input {
@@ -136,7 +135,7 @@ button {
     font-weight: 600;
 }
 
-button:hover{
+button:hover {
     background-color: #051a4e;
 }
 
