boton subir producto

--- a/www/css/verEmpresa.css
+++ b/www/css/verEmpresa.css
@@ -44,7 +44,9 @@ main {
     flex-direction: column;
     gap: 5px;
     align-items: center;
-    justify-content: center
+    justify-content: center;
+    border-top: 1px solid lightgray;
+    padding-top: 10px;
 }
 
 #map {
