--- a/www/css/registro.css
+++ b/www/css/registro.css
@@ -94,7 +94,7 @@
     transform: translateY(-50%);
     color: black;
     pointer-events: none;
-    transition: all 3s ease-in-out;
+    transition: all .2s ease-in-out;
 }
 
 input:focus~label,
