text align center en producto

--- a/www/css/verProducto.css
+++ b/www/css/verProducto.css
@@ -182,11 +182,11 @@ main {
 
 .desc {
     padding: 0 1rem;
-    text-align: justify;
     font-size: 12px;
 }
 
 .desc p {
+    text-align: center;
     white-space: pre-line;
 }
 
