--- a/www/css/verAdmin.css
+++ b/www/css/verAdmin.css
@@ -106,3 +106,37 @@ body {
 .Borrar button:hover {
     background-color: #c82333;
 }
+
+#divInsercionCategoria {
+    margin-top: 20px;
+}
+
+#divInsercionCategoria label {
+    margin-right: 10px;
+}
+
+#nombreCategoria {
+    width: 200px;
+    padding: 5px;
+    margin-right: 10px;
+}
+
+.insertar-input {
+    width: 200px;
+    padding: 5px;
+    margin-right: 10px;
+}
+
+.insertar-button {
+    width: 100%;
+    height: 50px;
+    background-color: rgb(67, 144, 67);
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+}
+
+.insertar-button:hover {
+    background-color: #4a994a;
+}
