responsive en movil y tablet carrusel

--- a/www/css/indexEmpresa.css
+++ b/www/css/indexEmpresa.css
@@ -118,6 +118,7 @@ button {
     background: #0a3093;
     border: none;
     outline: none;
+    margin-bottom: 10px;
     color: white;
     cursor: pointer;
     font-size: 1em;
