--- a/www/css/404.css
+++ b/www/css/404.css
@@ -16,11 +16,12 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
 img {
-    width: 350px;
-    margin-right: 40px;
+    width: 450px;
+
 }
 
 h1 {
@@ -55,4 +56,14 @@ button {
 
 button:hover {
     transform: scale(1.05);
+}
+
+@media (min-width: 600px) {
+    .content{
+        flex-direction: row;
+    }
+
+    img{
+        margin-right: 40px;
+    }
 }
