--- a/www/index.css
+++ b/www/index.css
@@ -37,7 +37,7 @@ body {
         100%;
 }
 
-main{
+main {
     min-height: 100vh;
 }
 
@@ -112,7 +112,8 @@ a {
     font-weight: 700;
     border-radius: 51px;
     border: 0;
-    width: 130px;
+    gap: 10px;
+    width: 180px;
     padding: 1rem;
     height: 40px;
     font-size: .9rem;
@@ -292,15 +293,30 @@ h5 {
     -webkit-line-clamp: 2;
 }
 
-#nada{
+.ayuda p{
+    margin: 10px 0;
+
+}
+
+.ayuda p, h2, h3, h1{
+    text-align: justify;
+}
+
+#nada {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
 }
 
-#nada img{
+#nada img {
     width: 200px;
+}
+
+#nada p {
+    color: gray;
+    text-align: center;
+    font-weight: 600;
 }
 
 .productos img {
@@ -332,7 +348,6 @@ footer img {
 
 /*MOVILES DE PANTALLA REDUCIDA*/
 @media (max-width:350px) {
-
     header,
     main,
     .btn,
@@ -371,36 +386,13 @@ footer img {
         width: 100px;
         height: 100px;
     }
+
 }
 
 /*TABLETS*/
 @media (min-width: 600px) {
-    .perfil {
-        display: none;
-    }
+    
 
-    header {
-        flex-direction: row;
-        justify-content: space-between;
-    }
-
-    body {
-        display: grid;
-        grid-template:
-            "header" 100px
-            "main" auto
-            "footer" 50px/
-            100%;
-    }
-
-    .avatar {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: transparent;
-        border: 0;
-        padding: .4em;
-    }
 
     .menuDesp {
         position: absolute;
@@ -435,7 +427,7 @@ footer img {
         color: red;
     }
 
-    .menuDesp #cerrarSesion:hover{
+    .menuDesp #cerrarSesion:hover {
         color: red;
     }
 
@@ -446,9 +438,8 @@ footer img {
     .btn {
         width: 140px;
         font-size: .875rem;
-        width: 210px;
+        width: 277px;
         height: 45px;
-        gap: 10px;
     }
 
     .productos .caja {
@@ -490,14 +481,8 @@ footer img {
         justify-items: center;
     }
 
-    #nada img{
+    #nada img {
         width: 500px;
-    }
-
-    #nada p{
-        color: gray;
-        text-align: center;
-        font-weight: 600;
     }
 
     footer {
@@ -508,7 +493,33 @@ footer img {
 
 /*MODO ESCRITORIO*/
 @media (min-width: 900px) {
-   
+    .avatar {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: transparent;
+        border: 0;
+        padding: .4em;
+    }
+
+    .perfil {
+        display: none;
+    }
+    
+    header {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    body {
+        display: grid;
+        grid-template:
+            "header" 100px
+            "main" auto
+            "footer" 50px/
+            100%;
+    }
+
     .btnDerecha,
     .btnIzquierda {
         display: flex;
