--- a/www/css/verProducto.css
+++ b/www/css/verProducto.css
@@ -13,7 +13,7 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 20px;
+    gap: 45px;
 }
 
 .verProductoCaja {
@@ -194,6 +194,9 @@ main {
 }
 
 .mapa {
+    padding: 15px 0;
+    border-top: 1px solid lightgray;
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 5px;
@@ -202,8 +205,8 @@ main {
 }
 
 #map {
-    width: 300px;
-    height: 300px;
+    width: 100%;
+    height: 390px;
     border: 1px solid lightgrey;
     box-shadow: 7px 6px 5px lightgrey;
     border-radius: 10px;
@@ -243,7 +246,7 @@ main {
     }
 
     #map {
-        width: 530px;
+        width: 70%;
         height: 400px;
     }
 }
@@ -280,8 +283,8 @@ main {
     }
 
     #map {
-        width: 700px;
-        height: 550px;
+        width: 50%;
+        height: 650px;
     }
 
 }
