--- a/www/css/verProducto.css
+++ b/www/css/verProducto.css
@@ -6,6 +6,7 @@
 
 main {
     margin: 1rem 0;
+    min-height: 0;
 }
 
 .pagina {
@@ -17,9 +18,9 @@ main {
 }
 
 .verProductoCaja {
-    border: 1px solid lightgray;
-    width: 350px;
-    box-shadow: 7px 6px 5px lightgrey;
+    width: 100%;
+    border: 1px solid #0A3093;
+    box-shadow: 0px 0px 8px #0A3093;
     border-radius: 20px;
     padding: 1rem 0;
 }
@@ -194,12 +195,10 @@ main {
 }
 
 .mapa {
-    padding: 15px 0;
+    padding: 40px 0;
     border-top: 1px solid lightgray;
     width: 100%;
     display: flex;
-    flex-direction: column;
-    gap: 5px;
     align-items: center;
     justify-content: center;
 }
@@ -207,20 +206,19 @@ main {
 #map {
     width: 100%;
     height: 390px;
-    border: 1px solid lightgrey;
-    box-shadow: 7px 6px 5px lightgrey;
+    border: 1px solid #0A3093;
+    box-shadow: 0px 0px 8px #0A3093;
     border-radius: 10px;
 }
 
-/*TABLET Y ORDERNADOR*/
+/*TABLET*/
 @media (min-width: 600px) {
-
     .fa-2xl {
         font-size: 50px;
     }
 
     .verProductoCaja {
-        width: 550px;
+        width: 70%;
     }
 
     .producto img {
@@ -250,14 +248,14 @@ main {
         height: 400px;
     }
 }
-
+/*ORDENADOR*/
 @media (min-width: 900px) {
     .container-carousel {
         height: auto;
     }
 
     .verProductoCaja {
-        width: 900px;
+        width: 50%;
     }
 
     .producto img {
