--- a/www/index.css
+++ b/www/index.css
@@ -498,6 +498,11 @@ footer img {
 
 /*MODO ESCRITORIO*/
 @media (min-width: 900px) {
+    header{
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+    }
+
     .avatar {
         display: flex;
         justify-content: center;
