--- a/www/css/verProducto.css
+++ b/www/css/verProducto.css
@@ -125,8 +125,8 @@ main {
 }
 
 .carruseles {
-    width: 1000%;
-    height: 100%;
+    min-width: 1000%;
+    height: 600px;
     display: flex;
 
 }
@@ -179,6 +179,7 @@ main {
 .producto img {
     object-fit: cover;
     width: 90%;
+    max-height: 600px;
     border-radius: 20px;
     margin: 0.5rem 0;
 }
