--- a/www/index.css
+++ b/www/index.css
@@ -158,6 +158,32 @@ form {
     flex-direction: column;
 }
 
+.cookies{
+    display: none;
+    flex-direction: column;
+    gap: 10px;
+    text-align: justify;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    background-color: white;
+    top: 20%;
+    right: 30%;
+    left: 30%;
+    z-index: 2;
+    min-width: 700px;
+    margin: 0 auto;
+    border-radius: 10px;
+    border: solid 1px #0A3093;
+    margin: 0 auto;
+    padding: 1rem;
+    box-shadow: 0px 0px 16px #0A3093;
+}
+
+.cookies img{
+    width: 200px;
+}
+
 .seccion1 {
     display: flex;
     flex-direction: column;
