--- a/www/index.css
+++ b/www/index.css
@@ -161,6 +161,7 @@ form {
 .cookies{
     display: none;
     flex-direction: column;
+    pointer-events: all;
     gap: 10px;
     text-align: justify;
     justify-content: center;
