--- a/www/css/verProducto.css
+++ b/www/css/verProducto.css
@@ -1,4 +1,6 @@
-
+main{
+    padding: 1rem;    
+}
 .pagina {
     display: flex;
     flex-direction: column;
@@ -9,6 +11,11 @@
 
 .seccion3{
     padding: 0px;    
+}
+
+hr{
+    width: 100%;
+    color: lightgray;
 }
 
 .verProductoCaja {
@@ -157,7 +164,7 @@
     font-size: 30px;
 }
 
-.fa-2xl:hover {
+.producto .fa-2xl:hover {
     scale: 1.3;
     transition: scale .2s ease-in-out;
 }
@@ -184,8 +191,6 @@
 }
 
 .mapa {
-    padding: 40px 0;
-    border-top: 1px solid lightgray;
     width: 100%;
     display: flex;
     align-items: center;
