--- a/www/css/indexEmpresa.css
+++ b/www/css/indexEmpresa.css
@@ -31,6 +31,8 @@ form {
     margin-left: 55px;
 }
 
+
+
 #divFotoPerfil {
     display: flex;
     justify-content: center;
@@ -48,7 +50,7 @@ form {
     width: 100px;
     height: 100px;
     border-radius: 100%;
-    object-fit: contain;
+    object-fit: cover;
 }
 
 #latitud,
